--- a/ProvaPub.Presentation/ProvaPub.csproj
+++ b/ProvaPub.Presentation/ProvaPub.csproj
@@ -21,4 +21,8 @@
     <Folder Include="Migrations\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ProvaPub.Domain\ProvaPub.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
